autocompletion show same entry with different quotes

When typing a name you can get multiple results, that only differ in the
quoutes they have:
John Doe <doe@example.com>
"John Doe" <doe@example.com>
"'John Doe'" <doe@example.com>

these should be joined into one:
John Doe <doe@example.com>

KOLAB: 3138
BUG: 336163